# messagepack-rs

./: Cargo.toml  Dockerfile  README.md  codecov.yml  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: codecov.yml  dependabot.yml
.github/workflows/: codspeed.yaml  coverage.yaml  dependabot_automerge.yaml  pull_request.yaml  release.yaml
crates/messagepack-bench/: Cargo.toml
crates/messagepack-bench/benches/: deserialization.rs  serialization.rs
crates/messagepack-bench/data/: lorem-ipsum.txt  raven.txt
crates/messagepack-bench/src/: lib.rs
crates/messagepack-core/: Cargo.toml  README.md
crates/messagepack-core/src/: formats.rs  io.rs  lib.rs
crates/messagepack-core/src/decode/: int.rs  mod.rs  nil.rs  str.rs
crates/messagepack-core/src/encode/: array.rs  bin.rs  bool.rs  extension.rs  float.rs  int.rs  map.rs  mod.rs  nil.rs  str.rs
crates/messagepack-serde/: Cargo.toml  README.md
crates/messagepack-serde/src/: lib.rs
crates/messagepack-serde/src/de/: enum_.rs  error.rs  mod.rs  num.rs  seq.rs
crates/messagepack-serde/src/ser/: error.rs  map.rs  mod.rs  num.rs  seq.rs
crates/messagepack-serde/src/value/: extension.rs  mod.rs  number.rs  value_.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_any_array.rs  fuzz_any_core.rs  fuzz_any_map.rs  fuzz_value_serde.rs
messagepack-bench/: Cargo.toml
messagepack-bench/benches/: deserialization.rs  serialization.rs
messagepack-bench/data/: jp-constitution.txt
messagepack-bench/src/: lib.rs
messagepack-core/: Cargo.toml  README.md
messagepack-core/src/: extension.rs  formats.rs  io.rs  lib.rs  timestamp.rs
messagepack-core/src/decode/: any.rs  array.rs  bin.rs  bool.rs  extension.rs  float.rs  int.rs  map.rs  mod.rs  nil.rs  str.rs  timestamp.rs
messagepack-core/src/encode/: array.rs  bin.rs  bool.rs  extension.rs  float.rs  int.rs  map.rs  mod.rs  nil.rs  str.rs  timestamp.rs
messagepack-core/src/extension/: decode.rs  encode.rs  mod.rs
messagepack-core/src/timestamp/: decode.rs  encode.rs  mod.rs
messagepack-core/tests/: any.rs  array.rs  bin.rs  float.rs  int.rs  map.rs  str.rs
messagepack-derive/: Cargo.toml  Review.md  TEST_BEHAVIOR.md
messagepack-derive-test/: Cargo.toml
messagepack-derive-test/tests/: array_mode.rs  basic_struct.rs  bytes_attr.rs  cross_format_decode.rs  custom_encode_decode.rs  decode_option_missing.rs  decode_validation.rs  derive_tests.rs  map_mode.rs  unit_struct.rs
messagepack-derive-test/tests/fail/: array_missing_key.rs  array_missing_key.stderr  default_missing.rs  enum.rs  map_and_array.rs  name_value_attr.stderr  no_bytes.rs  no_bytes.stderr  tuple_as_map.rs  tuple_as_map.stderr
messagepack-derive-test/tests/success/: basic_struct.rs  default.rs  generics.rs  lifetime_generics.rs  map_mode.rs  nested_bounds.rs  tuple_struct.rs
messagepack-derive/src/: attrs.rs  bound.rs  decode.rs  encode.rs  lib.rs  shared.rs  types.rs
messagepack-derive/tests/: array_types.rs  basic_struct.rs  bytes_attr.rs  cross_format_decode.rs  custom_encode_decode.rs  decode_option_missing.rs  option_and_box_behavior.rs  phantom_data.rs  review_issues.rs  tuple_struct.rs  unit_struct.rs
messagepack-derive/tests/fail/: array_missing_key.stderr  default_missing.stderr  enum.stderr  map_and_array.stderr  name_value_attr.rs  no_bytes.rs  no_bytes.stderr  phantomdata_with_key.rs  phantomdata_with_key.stderr
messagepack-derive/tests/success/: array_mode.rs  associated_type.rs  basic_struct.rs  bytes_attr.rs  cross_format_decode.rs  custom_encode_decode.rs  default.rs  generics.rs  lifetime_generics.rs  nested_bounds.rs  phantom_data.rs  tuple_struct.rs  unit_struct.rs
messagepack-serde/: Cargo.toml  README.md
messagepack-serde/src/: lib.rs
messagepack-serde/src/de/: enum_.rs  error.rs  mod.rs  seq.rs
messagepack-serde/src/extension/: de.rs  mod.rs  owned.rs  ser.rs  timestamp.rs
messagepack-serde/src/ser/: error.rs  map.rs  mod.rs  num.rs  seq.rs
messagepack-serde/src/value/: _value.rs  de.rs  extension.rs  extension_owned.rs  mod.rs  number.rs  ser.rs  value_.rs  value_owned.rs  value_ref.rs
messagepack-serde/tests/: float.rs  int.rs  rmp_serde.rs  value.rs
src/: formats.rs  lib.rs
src/decode/: array.rs  bin.rs  bool.rs  float.rs  int.rs  map.rs  mod.rs  nil.rs  str.rs
src/encode/: array.rs  bin.rs  bool.rs  extension.rs  float.rs  int.rs  map.rs  mod.rs  nil.rs  str.rs
