[workspace]
members = [
    "messagepack-core",
    "messagepack-serde",
    "messagepack-derive",
    "messagepack-bench",
    "fuzz",
    "messagepack-derive-test",
]
resolver = "3"

[workspace.package]
version = "0.2.3"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/tunamaguro/messagepack-rs"

[workspace.dependencies]

messagepack-core = { path = "messagepack-core", version = "0.2.3", default-features = false }
messagepack-derive = { path = "messagepack-derive", version = "0.2.3" }
messagepack-serde = { path = "messagepack-serde", version = "0.2.3", default-features = false }
num-traits = { version = "0.2", default-features = false }

# test dependencies
rstest = "0.26"
proptest = "1.11.0"
