[package]
name = "fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
messagepack-core = { path = "../messagepack-core" }
messagepack-serde = { path = "../messagepack-serde" }


[[bin]]
name = "fuzz_value_serde"
path = "fuzz_targets/fuzz_value_serde.rs"
test = false
doc = false
bench = false


[[bin]]
name = "fuzz_any_core"
path = "fuzz_targets/fuzz_any_core.rs"
test = false
doc = false
bench = false


[[bin]]
name = "fuzz_any_array"
path = "fuzz_targets/fuzz_any_array.rs"
test = false
doc = false
bench = false


[[bin]]
name = "fuzz_any_map"
path = "fuzz_targets/fuzz_any_map.rs"
test = false
doc = false
bench = false
