[package]
name = "messagepack-bench"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
messagepack-serde = { workspace = true, features = ["std"] }
rmp-serde = { version = "1.3.1", default-features = false }
rmpv = { version = "1.3.1", default-features = false, features = [
    "with-serde",
] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_bytes = { version = "0.11" }
rand = "0.9"

[dev-dependencies]
divan = { version = "3.0.5", package = "codspeed-divan-compat" }

[[bench]]
name = "serialization"
harness = false

[[bench]]
name = "deserialization"
harness = false
