[package]
name = "messagepack-core"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/tunamaguro/messagepack-rs"
description = "messagepack for `no_std`"
keywords = ["messagepack"]

[dependencies]
num-traits = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }

[features]
default = []
std = []
