[package]
name = "messagepack-core"
description = "messagepack for `no_std`"
keywords = ["messagepack"]
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[dependencies]
num-traits = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
proptest = { workspace = true }

[features]
default = ["std"]
alloc = []
std = ["alloc"]
