[package]
name = "messagepack-core"
description = "messagepack for `no_std`"
keywords = ["messagepack"]
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[dependencies]
num-traits = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
proptest = { workspace = true }

[features]
default = ["std"]
alloc = []
std = ["alloc"]

[[test]]
name = "int"
path = "tests/int.rs"
required-features = ["alloc"]

[[test]]
name = "float"
path = "tests/float.rs"
required-features = ["alloc"]

[[test]]
name = "str"
path = "tests/str.rs"
required-features = ["alloc"]

[[test]]
name = "bin"
path = "tests/bin.rs"
required-features = ["alloc"]

[[test]]
name = "array"
path = "tests/array.rs"
required-features = ["alloc"]

[[test]]
name = "map"
path = "tests/map.rs"
required-features = ["alloc"]

[[test]]
name = "any"
path = "tests/any.rs"
required-features = ["alloc"]
