[package]
name = "messagepack-serde"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/tunamaguro/messagepack-rs"
description = "messagepack for `no_std` with `serde`"
keywords = ["messagepack", "serde"]

[dependencies]
messagepack-core = { workspace = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_bytes = { version = "0.11" }
num-traits = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }

[features]
default = []
alloc = []
std = ["serde/std", "messagepack-core/std", "alloc"]
