[package]
name = "messagepack-serde"
description = "messagepack for `no_std` with `serde`"
keywords = ["messagepack", "serde"]
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[dependencies]
messagepack-core = { workspace = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_bytes = { version = "0.11" }
num-traits = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }

[features]
default = []
alloc = []
std = ["serde/std", "messagepack-core/std", "alloc"]
