[package]
name = "messagepack-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
messagepack-serde = { workspace = true }
rmp-serde = { version = "1.3.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_bytes = { version = "0.11" }
rand = "0.9"

[dev-dependencies]
divan = { version = "2.8.0", package = "codspeed-divan-compat" }

[[bench]]
name = "serialization"
harness = false
